# browser-agent

./: .gitignore  Cargo.toml  README.md
src/: chrome.rs  err.rs  main.rs  srv.rs
src/tools/: click.rs  click_at.rs  content.rs  find_contacts.rs  mod.rs  navigate.rs  ping.rs  press_key.rs  screenshot.rs  type_text.rs
